; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IPAnd4.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IPAnd4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IPAnd4(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %24, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %24, label %13

13:                                               ; preds = %10
  %14 = load i32*, i32** %6, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %24, label %16

16:                                               ; preds = %13
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @IsIP4(i32* %17)
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %16
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @IsIP4(i32* %21)
  %23 = icmp eq i32 %22, 0
  br i1 %23, label %24, label %27

24:                                               ; preds = %20, %16, %13, %10, %3
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @Zero(i32* %25, i32 4)
  br label %36

27:                                               ; preds = %20
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @IPToUINT(i32* %28)
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @IPToUINT(i32* %30)
  %32 = and i32 %29, %31
  store i32 %32, i32* %7, align 4
  %33 = load i32*, i32** %4, align 8
  %34 = load i32, i32* %7, align 4
  %35 = call i32 @UINTToIP(i32* %33, i32 %34)
  br label %36

36:                                               ; preds = %27, %24
  ret void
}

declare dso_local i32 @IsIP4(i32*) #1

declare dso_local i32 @Zero(i32*, i32) #1

declare dso_local i32 @IPToUINT(i32*) #1

declare dso_local i32 @UINTToIP(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
